--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,15 @@
 <body class="bg-gray-100 font-sans">
     <!-- Header Section -->
     <div class="bg-red-700 p-5 text-white">
-    <div class="max-w-6xl mx-auto flex items-center gap-4 flex-wrap">
-        <img src="/static/iitm_logo.png" alt="IITM Logo" class="h-12">
-        <h1 class="text-xl font-bold text-center sm:text-left">Indian Institute of Technology Madras</h1>
+        <div class="max-w-6xl mx-auto flex items-center flex-wrap">
+            <img src="/static/iitm_logo.png" alt="IITM Logo" class="h-12 mr-4">
+            <h1 class="text-xl font-bold">Indian Institute of Technology Madras</h1>
+        </div>
     </div>
-    </div>
-    <h1 class="text-2xl font-bold text-center text-gray-800 mt-6 mb-6">IITM BS Degree CGPA Calculator</h1>
+    <h1 class="text-2xl font-bold text-center text-gray-800 mt-6 mb-6 mx-auto max-w-xs">
+      IITM BS Degree CGPA Calculator
+    </h1>
+
     <div class="bg-white p-6 shadow-lg rounded mb-5 mx-4 sm:mx-10 md:mx-20 lg:mx-40">
         <h1 class="text-2xl font-bold text-center text-gray-800 mb-6">Easily Calculate Your CGPA with Just a Few Clicks!</h1>
         <h2 class="text-xl font-semibold text-center text-gray-800 mb-6">
