--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
 
     <!-- Footer Section -->
     <div class="bg-red-700 p-5 text-white text-center text-md mt-10">
-        <h1>For BSc and BS level courses, under development process.<br>&copy IIT Madras. All rights reserved.</h1>
+        <h1>For BSc and BS level courses, under development process.<br></h1>
     </div>  
 </body>
 </html>
